fix swipe down triggering reload on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
   margin: 0;
   width: 100%;
   height: 100%;
+
+  overscroll-behavior-y: contain;
 }
 
 * {
